Add basic artist page

--- a/templates/artist.html
+++ b/templates/artist.html
@@ -6,6 +6,6 @@
     <title>Artist</title>
   </head>
   <body>
-    <h2>{{ artist.name }}</h2>
+    <h2>Welcome to {{ data.artist.name }}'s official page</h2>
   </body>
 </html>
