--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="../static/css/bootstrap.min.css"
-      crossorigin="anonymous"
-    />
-
-    <!-- Fonts -->
-    <link
-      href="../static/fontawesome/css/fontawesome.min.css"
-      rel="stylesheet"
-    />
-    <link href="../static/fontawesome/css/solid.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Gothic+A1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Aladin&display=swap" rel="stylesheet">
-
-
-    <title>TodoApp</title>
-
-    <style>
-      * {
-        font-family: 'Gothic A1', sans-serif;
-      }
-      .mid {
-        min-width: 400px;
-        max-width: 1000px;
-        padding: 15px;
-        margin: auto;
-        margin-top: 1%;
-        text-align: center;
-      }
-      .completed-task {
-        text-decoration: line-through;
-      }
-      .panel {
-          padding: 20px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="mid">
-        <h1 style="font-family: 'Aladin', cursive;">YOUR TODO LIST</h1>
-        <h6>Let's go !</h6>
-      </div>
-      <div class="mid">
-            <a href="/artists">Artists</a>
-            <a href="/venues">Venues</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="../static/js/bootstrap.min.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+{% set navlinks = [
+  { 'name': 'Venues', 'class': '', 'link': '/venues'},
+  { 'name': 'Artists', 'class': '', 'link': '/artists'},
+  { 'name': 'Shows', 'class': '', 'link': '/shows'}
+]%}
+{% extends 'layouts/main.html' %}
+{% block title %}Fyyur{% endblock %}
+{% block content %}
+{% endblock %}
