--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -62,6 +62,11 @@
       .custom-color {
         color: goldenrod;
       }
+      .card-img-top {
+        width: 100%;
+        height: 15vw;
+        object-fit: cover;
+    }
     </style>
   </head>
   <body>
