--- a/templates/artists.html
+++ b/templates/artists.html
@@ -15,7 +15,7 @@
             <img src={{ artist.image_link }} class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{ artist.name }}</h5>
-              <p class="card-text">Hosted {{ artist.children|length }} shows</p>
+              <p class="card-text">Performed {{ artist.children|length }} shows</p>
             </div>
           </div>
         </div>
@@ -24,7 +24,7 @@
             <img src={{ artist.image_link }} class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{ artist.name }}</h5>
-              <p class="card-text">Hosted {{ artist.children|length }} shows</p>
+              <p class="card-text">Performed {{ artist.children|length }} shows</p>
             </div>
           </div>
         </div>
@@ -33,7 +33,7 @@
             <img src={{ artist.image_link }} class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{ artist.name }}</h5>
-              <p class="card-text">Hosted {{ artist.children|length }} shows</p>
+              <p class="card-text">Performed {{ artist.children|length }} shows</p>
             </div>
           </div>
         </div>
