--- a/templates/venue.html
+++ b/templates/venue.html
@@ -6,6 +6,6 @@
     <title>Venue</title>
   </head>
   <body>
-    <h2>{{ venue.name }}</h2>
+    <h2>Welcome to {{ data.venue.name }}'s official page</h2>
   </body>
 </html>
