Add search bars for artists and venues

--- a/templates/artists.html
+++ b/templates/artists.html
@@ -5,6 +5,12 @@
 {% block title %}Artists{% endblock %} {% block content %}
 <div class="container">
   <div class="mid">
+    <form style="margin-top: 15px; margin-bottom: 50px;">
+      <div class="form-group">
+        <input type="search" class="form-control" style="outline: none !important; box-shadow: none;" id="searchText"  placeholder="Search">
+        <h5 class="text-info" style="margin-top: 10px;">{{ data.artists|length }} artists</h5>
+      </div>
+    </form>
     <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
       {% for artist in data.artists|sort(attribute='name') %}
       <div class="col mb-4">
