--- a/templates/venues.html
+++ b/templates/venues.html
@@ -46,6 +46,12 @@
 <!-- </div> -->
 <div class="container">
   <div class="mid">
+      <form style="margin-top: 15px; margin-bottom: 50px;">
+        <div class="form-group">
+          <input type="search" class="form-control" style="outline: none !important; box-shadow: none;" id="searchText"  placeholder="Search">
+          <h5 class="text-info" style="margin-top: 10px;">{{ data.venues|length }} venues</h5>
+        </div>
+      </form>
       {% for city, city_group in data.venues|sort(attribute='city')|groupby('city') %}
       <div class="container">
         <div class="row">
