--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -14,6 +14,7 @@
     <link href="../static/fontawesome/css/solid.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Gothic+A1&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Aladin&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Cairo&display=swap" rel="stylesheet">
     <!--  -->
 
     <!-- CSS -->
@@ -23,7 +24,7 @@
     {% endif %}
     <style>
       * {
-        font-family: "Aladin", cursive;
+        font-family: 'Cairo', sans-serif;
         font-size: large;
       }
       .mid {
@@ -96,19 +97,150 @@
         </ul>
         <form class="form-inline">
           <div class="form-group mx-sm-3 mb-2">
-            <a class="nav-link custom-color" href="#">
+            <a class="nav-link custom-color" href="#" data-toggle="modal" data-target="#create-artist-modal" data-whatever="artist">
               Artist <i class="fas fa-plus-circle"></i>
             </a>
-            <a class="nav-link custom-color" href="#">
+            <a class="nav-link custom-color" href="#" data-toggle="modal" data-target="#create-venue-modal" data-whatever="venue">
               Venue <i class="fas fa-plus-circle"></i>
             </a>
-            <a class="nav-link custom-color" href="#">
+            <a class="nav-link custom-color" href="#" data-toggle="modal" data-target="#create-show-modal" data-whatever="show">
               Show <i class="fas fa-plus-circle"></i>
             </a>
           </div>
         </form>
       </div>
     </nav>
+    <!-- Create a new artist -->
+    <div class="modal fade" id="create-artist-modal" tabindex="-1" role="dialog" aria-labelledby="create-artist-modal-label" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="create-artist-modal-label">List a new artist</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <input type="text" class="form-control" id="name" placeholder="Name">
+              </div>
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="city" placeholder="City">
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="state" placeholder="State">
+                </div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="phone" placeholder="Phone">
+              </div>
+              <div class="form-group">
+                <small class="text-warning">Ctrl+Click to select multiple</small>
+                <select multiple class="form-control" id="genres">
+                  <option>Rock</option>
+                  <option>Alternative</option>
+                  <option>Pop</option>
+                  <option>Rap</option>
+                  <option>R&B</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="facebookLink" placeholder="Facebook Link">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Create</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  -->
+    <!-- Create a new Venue -->
+    <div class="modal fade" id="create-venue-modal" tabindex="-1" role="dialog" aria-labelledby="create-venue-modal-label" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="create-venue-modal-label">List a new venue</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <input type="text" class="form-control" id="name" placeholder="Name">
+              </div>
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="city" placeholder="City">
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="state" placeholder="State">
+                </div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="phone" placeholder="Phone">
+              </div>
+              <div class="form-group">
+                <small class="text-warning">Ctrl+Click to select multiple</small>
+                <select multiple class="form-control" id="genres">
+                  <option>Rock</option>
+                  <option>Alternative</option>
+                  <option>Pop</option>
+                  <option>Rap</option>
+                  <option>R&B</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="facebookLink" placeholder="Facebook Link">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Create</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  -->
+    <!-- Create a new show -->
+    <div class="modal fade" id="create-show-modal" tabindex="-1" role="dialog" aria-labelledby="create-show-modal-label" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="create-show-modal-label">List a new show</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <small class="text-warning"><strong>Artist ID</strong> can be found on the artist's page</small>
+                <input type="text" class="form-control" id="artist_id" placeholder="Artist ID">
+              </div>
+              <div class="form-group">
+                <small class="text-warning"><strong>Venue ID</strong> can be found on the venue's page</small>
+                <input type="text" class="form-control" id="venue_id" placeholder="Venue ID">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="start_time" placeholder="Date of the show .. YYYY-MM-DD HH:MM:SS">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Create</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  -->
     {% endif %}
 
     {% block content %}{% endblock %}
@@ -117,6 +249,38 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    {% if USE_CUSTOM_NAV %}
+    {% else %}
+    <script>
+      $('#create-artist-modal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) // Button that triggered the modal
+        var recipient = button.data('whatever') // Extract info from data-* attributes
+        // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+        // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+        var modal = $(this)
+        modal.find('.modal-title').text('List a new artist')
+        // modal.find('.modal-body input').val(recipient)
+      })
+      $('#create-venue-modal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) // Button that triggered the modal
+        var recipient = button.data('whatever') // Extract info from data-* attributes
+        // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+        // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+        var modal = $(this)
+        modal.find('.modal-title').text('List a new venue')
+        // modal.find('.modal-body input').val(recipient)
+      })
+      $('#create-show-modal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) // Button that triggered the modal
+        var recipient = button.data('whatever') // Extract info from data-* attributes
+        // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+        // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+        var modal = $(this)
+        modal.find('.modal-title').text('List a new show')
+        // modal.find('.modal-body input').val(recipient)
+      })
+    </script>
+    {% endif %}
     {% block scripts %}{% endblock %}
     <!--  -->
 
